[workspace]
members = [
    "fx",
    "fx-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "llm serving."
homepage = ""
license = "MIT"
repository = "github.com/mragungsetiaji/i"
keywords = ["llm"]
categories = ["machine-learning"]

[workspace.dependencies]
anyhow = { version = "1.0.80", feature = "std" }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1"}